<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Les Strings de base -->
    <string name="app_name">Point-it_Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Les Strings des titres des activités -->
    <string name="title_activity_accueil"> Point-it </string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_classement">Classement</string>
    <string name="title_activity_ajout_point">AjoutPoint</string>
    <string name="title_activity_commenter">Commenter</string>

    <!-- Strings de l'activité Accueil -->
    <string name="messageAccueil"> Bienvenue sur l\'application Point-it </string>
    <string name="boutonSeConnecter"> Se connecter </string>
    <string name="notConnected"> Vous n\'êtes pas connecté </string>
    <string name="boutonInscription"> S\'inscrire </string>
    <string name="boutonProfil">Profil </string>
    <string name="boutonClassement">Classement </string>
    <string name="boutonAjoutPoint"> + Point </string>
    <string name="typeDePointAccueil"><u>Type de point : </u></string>
    <string name="AttribueA"><u>Attribué A : </u></string>

    <!-- Strings de l'activité Connexion -->
    <string name="nomUtilisateur"> Nom d\'utilisateur : </string>
    <string name="motdepasse"> Mot de passe : </string>
    <string name="buttonConnexion"> Connexion ! </string>
    <string name="connexionFailed"> Le login ou le mot de passe est faux </string>
    <string name="connexionSuccess"> Vous êtes conneté ! </string>

    <!-- Strings de l'activité Inscription -->
    <string name="confirmerMotdepasse"> Confirmer mot de passe </string>
    <string name="inscriptionSuccess"> Vous êtes inscrit ! </string>

    <!-- Strings de l'activité Profil -->
    <string name="typeDePoint"> Type de point </string>
    <string name="nombre"> Nombre </string>

    <!-- Strings de l'activité Classement -->
    <string name="lesAutres"> Les autres personnes sans importance </string>
    <string name="personne"> Personne </string>
    <string name="classementGeneral"> Classement général </string>
    <string name="moustache"> Moustache </string>
    <string name="nazi"> Nazi </string>
    <string name="princesse"> Princesse </string>
    <string name="vietnam"> Vietnam </string>

    <!-- Strings de l'activité AjoutPoint -->
    <string name="personnes"> Personnes </string>
    <string name="description"> Description </string>
    <string name="epique"> Epique </string>
    <string name="prendCa"> Prends-ça !</string>

    <!-- Strings de la liste des points -->
    <string name="boutonApprouver"> Approuver </string>
    <string name="boutonCommenter"> Commenter </string>

    <!-- Strings des toasts -->
    <string name="toastNoConnexion">  Votre appareil n\'est pas connecté </string>
    <string name="toastFormulaireAjoutPointMalRemplis">  Vous devez remplir le champs personne et le champs description pour ajouter un point </string>
    <string name="toastNonConnecterApprouver">  Vous devez être connecté pour approuver un point </string>
    <string name="toastRecupDonnee">  Récupération des données</string>
    <string name="toastUpdateFail">  Récupération impossible, vérifiez votre connexion</string>
    <string name="imgNonDisponible">  Image non disponible</string>
    <string name="toastConnexionFail">  La connexion prend trop de temps, verifiez votre connexion</string>
  

</resources>
