<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.point_it_android.Classement" >

    <item
        android:id="@+id/classementGeneral"
        android:showAsAction="never"
        android:title="@string/classementGeneral"/>
    
     <item
        android:id="@+id/moustache"
        android:showAsAction="never"
        android:title="@string/moustache"/>
     
      <item
        android:id="@+id/nazi"
        android:showAsAction="never"
        android:title="@string/nazi"/>
      
       <item
        android:id="@+id/princesse"
        android:showAsAction="never"
        android:title="@string/princesse"/>
       
        <item
        android:id="@+id/vietnam"
        android:showAsAction="never"
        android:title="@string/vietnam"/>
 

</menu>
