<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.point_it_android.Accueil" >

    <TextView
        android:id="@+id/connecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
         />
    
     <TextView
        android:id="@+id/messageAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageAccueil"
         />
     
      <Button
        android:id="@+id/boutonVersConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Connexion"
        android:text="@string/boutonSeConnecter" />
      
       <Button
        android:id="@+id/boutonVersInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Inscription"
        android:text="@string/boutonInscription" />
       
        <Button
        android:id="@+id/boutonVersProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Profil"
        android:text="@string/boutonProfil"
        android:visibility="gone" />
        
       <Button
        android:id="@+id/boutonVersClassement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Classement"
        android:text="@string/boutonClassement"
        android:visibility="gone" />
       
        <Button
        android:id="@+id/boutonVersAjoutPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="AjoutPoint"
        android:text="@string/boutonAjoutPoint"
        android:visibility="gone" />

</LinearLayout>
