<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.point_it_android.AjoutPoint" >

    <TextView
        android:id="@+id/TextViewPersonne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/personnes"
        android:padding="10dp" /> <!-- Gravity start met l'élément à gauche -->
        
    <EditText
        android:id="@+id/EditTextPersonne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    
     <TextView
        android:id="@+id/TextViewPoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/typeDePoint"
        android:padding="10dp" /> <!-- Gravity start met l'élément à gauche -->
        
    <Spinner
	    android:id="@+id/SpinnerTypeDePoint"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/TextViewDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/description"
        android:padding="10dp" /> <!-- Gravity start met l'élément à gauche -->
        
    <EditText
        android:id="@+id/EditTextDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="1000"
        android:maxLines="4" />
    
    
    <CheckBox android:id="@+id/CheckboxEpique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epique"
        android:padding="10dp"/>
    
    <Button 
        android:id="@+id/ButtonPrendCa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prendCa"
        android:onClick="AjoutPoint"/>

</LinearLayout>
