<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.point_it_android.Classement" >
    
     <TextView
         android:id="@+id/typeDeClassement"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/classementGeneral"
         android:textSize="24sp"
         android:layout_margin="5dp" />
     
	<TextView
        android:id="@+id/TextView1erClassement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Nom du premier"
        android:textColor="#DF7401"
        android:background="#FACC2E"
        android:layout_span="3"
        android:padding="5dp"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/TextView2emeClassement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Nom du deuxième"
        android:textColor="#2E2E2E"
        android:background="#BDBDBD"
         android:padding="5dp"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/TextView3emeClassement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Nom du troisième"
        android:textColor="#B43104"
        android:background="#B45F04"
         android:padding="5dp"
        android:layout_margin="5dp" />
    
      <TextView
            android:id="@+id/TextViewTitreTableauLesAutres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/lesAutres" />
      
      
      <TableLayout 
        android:id="@+id/TableauClassement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
        <TableRow
            android:id="@+id/TableRowTitre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            >
            
            <TextView
             android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:text="@string/title_activity_classement"
             android:layout_weight="1" 
            android:gravity="center" />
            
              <TextView
             android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:text="@string/personne"
             android:layout_weight="1" 
            android:gravity="center" />
              
               <TextView
             android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:text="@string/nombre"
             android:layout_weight="1" 
            android:gravity="center" />
            
        </TableRow>
   
    </TableLayout>

</LinearLayout>
